# hello-world-gear-academy

./: Cargo.toml  build.rs  meta.txt
.github/workflows/: build.yml
hello-world-io/: Cargo.toml
hello-world-io/src/: lib.rs
io/: Cargo.toml
io/src/: lib.rs
src/: lib.rs
tests/: hello_world_test.rs
